welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:7: error: plm.universe.Direction does not take parameters
def avPS() {if (!estFaceMur()) {avance()} else {var d = getDirection();if (d == Direction.EST()) {gauche();avance();gauche()} else {droite();avance();droite()}}}
                                                                                             ^